--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-Django==2.2.2
-psycopg2==2.8.3
-pytz==2019.1
-sqlparse==0.3.0
 boto3==1.9.170
 botocore==1.12.170
+dj-database-url==0.5.0
 Django==2.2.2
+django-heroku==0.3.1
 django-model-utils==3.1.2
 django-sass-processor==0.7.3
 docutils==0.14
+gunicorn==19.9.0
 jmespath==0.9.4
 psycopg2==2.8.3
 python-dateutil==2.8.0
@@ -16,3 +15,4 @@ s3transfer==0.2.1
 six==1.12.0
 sqlparse==0.3.0
 urllib3==1.25.3
+whitenoise==4.1.2
