--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ boto3==1.9.170
 botocore==1.12.170
 dj-database-url==0.5.0
 Django==2.2.2
+django-bulma==0.5.6
 django-heroku==0.3.1
 django-model-utils==3.1.2
 django-sass-processor==0.7.3
